--- a/client/flip/src/compononents/views/Home/Home.module.css
+++ b/client/flip/src/compononents/views/Home/Home.module.css
@@ -21,7 +21,7 @@
     font-family: var(--logo-font);
 }
 
-.login {
+.loginSignup {
     flex: 1 0 65%;
     height: 100%;
     background-color: var(--card-blue);
