--- a/client/flip/src/compononents/common/SignupForm/SignupForm.module.css
+++ b/client/flip/src/compononents/common/SignupForm/SignupForm.module.css
@@ -15,10 +15,10 @@
 .header {
     width: 100%;
     text-align: center;
-    font-size: 50px;
+    font-size: 35px;
     color: var(--card-blue);
     font-family: var(--text-font);
-    padding: 30px 0;
+    padding: 20px 0;
     border-bottom: solid 3px var(--card-pink);
 }
 
@@ -29,45 +29,45 @@
     justify-content: space-between;
     border-bottom: solid 1px var(--card-pink);
     width: 100%;
-    margin: 25px;
+    margin: 15px;
 }
 
 .input {
     flex: 1 0 70%;
-    height: 70px;
+    height: 55px;
     outline: none;
     background-color: var(--background-yellow);
     border: none;
     font-family: var(--logo-font);
     color: var(--pencil-gray);
-    font-size: 60px;
+    font-size: 48px;
 }
 
 .label {
     flex: 0 1 30%;
     font-family: var(--logo-font);
-    font-size: 60px;
+    font-size: 48px;
     margin-right: 30px;
 }
 
 .actions {
-    padding: 30px;
+    padding-bottom: 15px;
 }
 
 .submitBtn {
-    height: 80px;
-    font-size: 70px;
+    height: 60px;
+    font-size: 60px;
     font-weight: 500;
     font-family: var(--logo-font);
     color: var(--card-green);
     outline: none;
     border: none;
-    background: none;
-    padding: 5px 20px;
+    background: local;
+    padding: 0 20px;
 }
 
 .submitBtn:hover {
     cursor: pointer;
-    font-size: 75px;
+    font-size: 64px;
     font-weight: 600;
 }
