--- a/client/flip/src/compononents/views/Home/Home.module.css
+++ b/client/flip/src/compononents/views/Home/Home.module.css
@@ -8,7 +8,6 @@
 
 .splash {
     flex: 1 0 35%;
-    height: 100%;
     background-color: var(--background-yellow);
     display: flex;
     flex-direction: column;
@@ -34,20 +33,30 @@
 }
 
 .error {
-    height: 40px;
+    height: 30px;
     background: var(--card-blue);
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .errorMsg {
     color: var(--background-yellow);
-    font-size: 32px;
+    font-size: 22px;
     text-align: center;
 }
 
-.loginSignup {
+.wrapper {
     flex: 1 0 65%;
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--card-blue);
+}
+
+.loginSignup {
+    width: 80%;
+    height: 70%;
     background-color: var(--card-blue);
     display: flex;
     flex-direction: column;
