--- a/client/flip/src/compononents/views/UserHome/UserHome.module.css
+++ b/client/flip/src/compononents/views/UserHome/UserHome.module.css
@@ -1,6 +1,4 @@
-@import url('./index.css');
-
-.mainContainer {
+.userHomePage {
   height: 100%;
   display: grid;
   background: var(--background-yellow);
@@ -9,11 +7,5 @@
   grid-template-rows: 100px auto;
   grid-template-areas: 
   "header"
-  "page";
-  margin: -8px -8px -8px -8px;
-  font-family: 'Vidaloka', serif;
-}
-
-.heading {
-  font-size: 50px;
+  "content";
 }
