--- a/client/flip/src/compononents/common/Header/LogoutLink.module.css
+++ b/client/flip/src/compononents/common/Header/LogoutLink.module.css
@@ -1,10 +1,11 @@
+@import url('../../../index.css');
+
 .logout {
-  /* color: rgb(62, 90, 248); */
-  /* color: #E64398; */
-  color: var(--lighter-blue);
+  font-size: 20px;
+  color: var(--card-blue);
 }
 
 .logout:hover {
   cursor: pointer;
-  color: var(--logo-blue);
+  color: var(--card-pink);
 }
