--- a/client/flip/src/index.css
+++ b/client/flip/src/index.css
@@ -2,9 +2,10 @@
   --background-yellow: rgb(246, 238, 146);
   --lighter-blue: rgb(139, 144, 218);
   --card-blue: rgb(81, 128, 248);
+  --action-blue: rgb(103, 145, 253);
   --card-pink: #f8519f;
-  --card-purple: rgb(189, 96, 244);
-  --card-green: rgb(31, 165, 100);
+  --card-purple: rgb(199, 107, 252);
+  --card-green: rgb(19, 214, 120);
   --pencil-gray: #5c6274;
   --logo-font: 'Reenie Beanie', cursive;
   --text-font: 'Vidaloka', serif;
