--- a/client/flip/src/compononents/views/CreateDeck/CreateDeck.module.css
+++ b/client/flip/src/compononents/views/CreateDeck/CreateDeck.module.css
@@ -1,7 +1,7 @@
 @import url('../../../index.css');
 
 .createDeckPage {
-    height: 100%;
+    height: 100vh;
     display: grid;
     color: var(--card-blue);
     background: var(--background-yellow);
@@ -17,52 +17,66 @@
     display: flex;
     justify-content: center;
     padding-bottom: 30px;
-    height: 100vh;
+    height: 100%;
 }
 
 .createDeckContent {
-    flex: 1 0 80%;
+    flex: 1 0 70%;
     color: var(--card-blue);
     background: var(--background-yellow);
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    gap: 20px;
     align-items: center;
 }
 
-.addedCards {
-    flex: 1 0 20%;
-    padding: 20px;
+.addedCardsContainer {
+    flex: 1 0 30%;
+    /* padding-right: 20px; */
     background: var(--background-yellow);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.addedCards {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .line {
     width: 100%;
-    border: solid .5px var(--card-pink);
+    margin-top: -15px;
+    border-top: solid 2px var(--card-pink);
 }
 
 .addedCard {
-    height: 120px;
+    height: 100px;
     width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    max-width: 200px;
+    display: block;
     color: var(--background-yellow);
-    background: var(--card-purple);
+    background: var(--action-blue);
     box-shadow: 2px 2px 4px black;
-    margin: 15px;
+    margin-top: 10px;
+    padding: 8px 12px;
 }
 
 .addedCardsHeader {
-    font-size: 40px;
+    font-size: 32px;
 }
 
 .addedCardLabel {
+    text-align: center;
+    color: var(--background-yellow);
     font-size: 30px;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .addCardBtn {
@@ -99,7 +113,7 @@
 }
 
 .actions {
-    width: 100%;
+    width: 50%;
     margin-top: 30px;
     padding: 30px;
     display: flex;
@@ -108,9 +122,10 @@
 }
 
 .cancelBtn {
+    flex: 1 0 50%;
     padding: 20px;
-    color: var(--card-pink);
-    font-size: 40px;
+    color: var(--card-purple);
+    font-size: 32px;
     font-family: var(--text-font);
     background: var(--background-yellow);
     border: none;
@@ -118,12 +133,13 @@
 
 .cancelBtn:hover {
     cursor: pointer;
-    font-size: 42px;
+    font-size: 36px;
     font-weight: 700;
     color: var(--card-blue);
 }
 
 .finishBtn {
+    flex: 1 0 50%;
     padding: 20px;
     color: var(--dark-green);
     font-size: 70px;
