--- a/client/flip/src/compononents/common/CreateCardForm/CardSide/CardSide.module.css
+++ b/client/flip/src/compononents/common/CreateCardForm/CardSide/CardSide.module.css
@@ -1,7 +1,13 @@
+@import url('../../../../index.css');
+
+.react-card-back {
+    background: var(--background-yellow) !important;
+}
+
 .cardSide {
-    height: 400px;
+    height: 300px;
     width: 100%;
-    min-width: 700px;
+    min-width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,9 +18,12 @@
 }
 
 .label {
-    font-size: 40px;
+    width: 100%;
+    padding-bottom: 10px;
+    font-size: 30px;
     margin-bottom: 10px;
     color: var(--pencil-gray);
+    border-bottom: solid 1.5px var(--card-pink);
 }
 
 .line {
@@ -41,13 +50,13 @@
 }
 
 .frontInput {
-    height: 60px;
-    font-size: 40px;
-    margin-top: 50px;
+    height: 50px;
+    font-size: 32px;
+    margin-top: 30px;
 }
 
 .backInput {
-    height: 160px;
+    height: 120px;
     font-size: 24px;
     margin-top: 5px;
 }
@@ -56,9 +65,9 @@
     color: var(--card-pink);
     background: var(--create-card-green);
     border: none;
-    margin-top: 25px;
+    margin-top: 2px;
     padding: 10px 30px;
-    font-size: 36px;
+    font-size: 30px;
     font-family: var(--text-font);
     border-radius: 8px;
     width: 150px;
