--- a/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
+++ b/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
@@ -1,43 +1,41 @@
-.createCardContainer {
+@import url('../../../index.css');
+
+.createCardFormContainer {
+    flex: 1 0 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
 }
 
 .createCardForm {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
     color: var(--background-yellow);
     background: var(--background-yellow);
-    padding: 20px;
 }
 
 .addCard {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    height: 100px;
+    height: 80px;
 }
 
 .addCardBtn {
-    height: 90px;
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 500;
     font-family: var(--logo-font);
     color: var(--dark-green);
     outline: none;
     border: none;
-    padding: 0 20px;
+    padding: 0 15px;
     background: none;
 }
 
 .addCardBtn:hover {
     cursor: pointer;
-    font-size: 86px;
+    font-size: 64px;
     font-weight: 700;
 }
