--- a/client/flip/src/compononents/SelectedDeck/SelectedDeck.module.css
+++ b/client/flip/src/compononents/SelectedDeck/SelectedDeck.module.css
@@ -24,16 +24,37 @@
     z-index: 0;
 }
 
-.header {
-    height: 91px;
-    font-size: 40px;
-    padding: 20px 0;
+.selectedDeckHeader {
     width: 100%;
+    display: flex;
+    align-items: center;
+    height: 91px;
+    z-index: 2;
+    border-bottom: solid 2px var(--card-pink);
     text-align: center;
     margin-bottom: 10px;
+    justify-content: flex-end;
+}
+
+.spacer {
+    flex: 1 0 15%;
+}
+
+.header {
+    flex: 1 0 70%;
+    font-size: 40px;
     color: var(--background-yellow);
-    border-bottom: solid 2px var(--card-pink);
     z-index: 2;
+}
+
+.icon {
+    flex: 1 0 15%;
+    color: var(--background-yellow);
+    z-index: 2;
+}
+
+.icon:hover {
+    cursor: pointer;
 }
 
 .greyLines {
