Finished the flow for studying and restudying decks.

--- a/client/flip/src/compononents/common/AddedCards/AddedCards.module.css
+++ b/client/flip/src/compononents/common/AddedCards/AddedCards.module.css
@@ -38,6 +38,10 @@
     box-shadow: 2px 2px 4px var(--card-pink);
 }
 
+.addedCard:disabled {
+    cursor: none;
+}
+
 .addedCardsHeader {
     font-size: 24px;
 }
