Fixed styling on logout page to match themes.

--- a/client/flip/src/compononents/views/Logout/Logout.module.css
+++ b/client/flip/src/compononents/views/Logout/Logout.module.css
@@ -2,14 +2,12 @@
 
 .logoutPage {
     grid-area: page;
-    background: var(--background-yellow);
+    height: 400px;
+    background: var(--create-card-green);
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    width: 50%;
+    width: 60%;
     margin: auto;
-    border-radius: 10px;
-    border: solid .5px var(--card-pink);
-    box-shadow: -4px 4px 2px black;
+    box-shadow: 3px 3px 6px black;
 }
