--- a/client/flip/src/compononents/views/Logout/LogoutForm.module.css
+++ b/client/flip/src/compononents/views/Logout/LogoutForm.module.css
@@ -1,46 +1,49 @@
-.logoutHeader {
-  flex: 0 0 70px;
-  text-align: center;
-  font-size: 64px;
-  color: var(--background-purple);
-  font-family: 'Lobster', cursive;
-  text-shadow: 0 0 3px var(--logo-blue), 0 0 3px var(--logo-blue), 0 0 3px var(--logo-blue), 0 0 3px var(--logo-blue);
-}
+@import url('../../../index.css');
 
 .actions {
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content:space-evenly; */
+  justify-content: space-evenly;
+  gap: 20;
   align-items: center;
   text-align: center;
-  margin: 0 0 20px 0;
+  width: 100%;
+}
+
+.logoutHeader {
+  width: 100%;
+  padding-bottom: 10px;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 400;
+  color: var(--pencil-gray);
+  font-family: var(--text-font);
+  border-bottom: solid 2px var(--card-pink);
 }
 
 .logoutButton {
-  flex: 1 0 auto;
   text-align: center;
-  color: var(--electric-pink);
-  font-family: 'Lobster', cursive;
-  text-decoration: none;
-  border: none;
+  color: var(--card-blue);
+  font-family: var(--logo-font);
   font-size: 80px;
-  font-weight: 400;
+  font-weight: 500;
+  margin: 30px 0;
 }
 
 .logoutButton:hover {
   cursor: pointer;
-  color: var(--logo-blue);
+  color: var(--card-purple);
 }
 
 .cancelButton {
-  flex: 0 0 auto;
-  color: var(--lighter-blue);
+  margin: 30px 0;
+  color: var(--card-purple);
+  opacity: .8;
   border: none;
-  background: var(--background-purple);
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .cancelButton:hover {
-  color: var(--electric-pink);
   cursor: pointer;
+  opacity: 1;
 }
