--- a/client/flip/src/compononents/common/ScrollCaret/ScrollCaret.module.css
+++ b/client/flip/src/compononents/common/ScrollCaret/ScrollCaret.module.css
@@ -1,16 +1,16 @@
-@import url('../../index.css');
+@import url('../../../index.css');
 
-.scrollArrow {
+.scrollCaret {
     background: var(--background-yellow);
     color: var(--card-pink);
-    width: 60px;
+    width: 30;
     margin: 10px;
     padding: 5px;
     border: none;
     outline: none;
 }
 
-.scrollArrow:hover {
+.scrollCaret:hover {
     color: var(--card-blue);
     cursor: pointer;
 }
