--- a/client/flip/src/compononents/common/UserResult/UserResult.module.css
+++ b/client/flip/src/compononents/common/UserResult/UserResult.module.css
@@ -1,29 +1,33 @@
 @import url('../../../index.css');
 
-.userFeedCarousel {
-    flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
+.userResultContainer {
+    height: 300px;
+    width: 500px;
+    background-color: var(--background-yellow);
+    box-shadow: 2px 2px 4px black;
 }
 
-.contentHeader {
-    font-size: 60px;
-    font-family: var(--logo-font);
-    margin: 20px;
+.username {
+    border-bottom: solid 2px var(--card-pink);
+    color: var(--card-blue);
+    width: 100%;
+    padding-bottom: 10px;
+    font-size: 30px;
+    text-align: center;
 }
 
 .contentContainer {
-    max-width: 1000px;
+    width: 90%;
     display: flex;
-    gap: 20px;
+    gap: 10px;
     align-items: center;
     overflow: hidden;    
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .deckCarouselItem {
-    height: 150px;
-    min-width: 280px;
+    height: 80px;
+    width: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,18 +40,18 @@
 
 .line {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
     background: var(--card-pink);
     border: solid 1px var(--card-pink);
 }
 
 .name {
-    padding-top: 20px;
+    padding-top: 10px;
+    font-size: 20px;
 }
 
 .deckCarouselItem:hover {
     cursor: pointer;
     box-shadow: 2px 2px 4px var(--card-pink);
     color: var(--pencil-gray);
-
 }
