--- a/client/flip/src/compononents/common/Actions/Actions.module.css
+++ b/client/flip/src/compononents/common/Actions/Actions.module.css
@@ -1,8 +1,12 @@
 .actions {
-  flex: 1 0 20%;
+  flex: 1 0 25%;
   padding-top: 40px;
   background: var(--background-yellow);
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.followUser {
+  justify-content: center;
 }
