--- a/client/flip/src/compononents/views/UserPage/UserPage.module.css
+++ b/client/flip/src/compononents/views/UserPage/UserPage.module.css
@@ -1,6 +1,6 @@
 @import url('../../../index.css');
 
-.userHomePage {
+.userPage {
   height: 100vh;
   width: 100vw;
   display: grid;
@@ -11,9 +11,10 @@
   grid-template-areas: 
   "header"
   "content";
+  overflow-x: hidden;
 }
 
-.userContent {
+.content {
   grid-area: content;
   height: 100%;
   color: var(--card-blue);
@@ -21,12 +22,31 @@
   display: flex;
 }
 
-.userFeed {
-  flex: 1 0 80%;
-  padding: 0 40px;
+.feed {
+  flex: 1 0 75%;
+  padding-left: 40px;
   color: var(--card-blue);
   background: var(--background-yellow);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+}
+
+.usernameHeader {
+    font-size: 36px;
+    text-align: center;
+    margin: 30px 0 0 0;
+}
+
+.username {
+    color: var(--card-pink);
+}
+
+.followUser {
+    flex: 1 0 25%;
+    padding-top: 40px;
+    background: var(--background-yellow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
