--- a/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
+++ b/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
@@ -5,6 +5,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .createCardForm {
@@ -16,11 +18,18 @@
     background: var(--background-yellow);
 }
 
+.error {
+    font-size: 18px;
+    text-align: center;
+    padding: 5px;
+    height: 40px;
+}
+
 .addCard {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80px;
+    height: 70px;
 }
 
 .addCardBtn {
