--- a/client/flip/src/compononents/common/CarouselItems/CarouselItem/CarouselItem.module.css
+++ b/client/flip/src/compononents/common/CarouselItems/CarouselItem/CarouselItem.module.css
@@ -2,7 +2,7 @@
 
 .carouselItem {
     height: 120px;
-    min-width: 210px;
+    width: 210px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,7 +21,11 @@
 }
 
 .label {
-    padding-top: 20px;
+    padding-top: 10px;
+    width: 93%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .carouselItem:hover {
