--- a/client/flip/src/compononents/common/StudyCardSide/StudyCardSide.module.css
+++ b/client/flip/src/compononents/common/StudyCardSide/StudyCardSide.module.css
@@ -2,8 +2,8 @@
 
 .studyCardSide {
     height: 350px;
-    width: 100%;
-    min-width: 620px;
+    width: 80%;
+    width: 620px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -27,10 +27,14 @@
 
 .frontValue {
     font-size: 36px;
+    text-align: center;
+    padding: 10px;
 }
 
 .backValue {
     font-size: 26px;
+    text-align: center;
+    padding: 10px;
 }
 
 .flipCardBtn {
