--- a/client/flip/src/compononents/common/CreateDeckContent/CreateDeckContent.module.css
+++ b/client/flip/src/compononents/common/CreateDeckContent/CreateDeckContent.module.css
@@ -13,7 +13,7 @@
     color: var(--card-blue);
     background: var(--background-yellow);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -51,7 +51,7 @@
 }
 
 .actions {
-    flex: 1 0 30%;
+    flex: 1 0 20%;
     margin-top: -20px;
     display: flex;
     flex-direction: column;
