--- a/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
+++ b/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
@@ -48,3 +48,20 @@
     font-size: 64px;
     font-weight: 700;
 }
+
+.deleteCardBtn {
+    font-size: 60px;
+    font-weight: 500;
+    font-family: var(--logo-font);
+    color: var(--card-purple);
+    outline: none;
+    border: none;
+    padding: 0 15px;
+    background: none;
+}
+
+.deleteCardBtn:hover {
+    cursor: pointer;
+    font-size: 64px;
+    font-weight: 700;
+}
