--- a/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
+++ b/client/flip/src/compononents/common/CreateCardForm/CreateCardForm.module.css
@@ -1,7 +1,7 @@
 @import url('../../../index.css');
 
 .createCardFormContainer {
-    flex: 1 0 70%;
+    flex: 1 0 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,6 +44,23 @@
 }
 
 .addCardBtn:hover {
+    cursor: pointer;
+    font-size: 64px;
+    font-weight: 700;
+}
+
+.deleteCardBtn {
+    font-size: 60px;
+    font-weight: 500;
+    font-family: var(--logo-font);
+    color: var(--card-purple);
+    outline: none;
+    border: none;
+    padding: 0 15px;
+    background: none;
+}
+
+.deleteCardBtn:hover {
     cursor: pointer;
     font-size: 64px;
     font-weight: 700;
