Adjusted stome styling and refactored the 'Back to Home' button on Deck view.

--- a/client/flip/src/App.module.css
+++ b/client/flip/src/App.module.css
@@ -2,6 +2,7 @@
 
 .mainContainer {
   height: 100%;
+  width: 100%;
   display: grid;
   background: var(--background-yellow);
   color: var(--card-blue);
