--- a/client/flip/src/compononents/views/UserPage/UserPage.module.css
+++ b/client/flip/src/compononents/views/UserPage/UserPage.module.css
@@ -28,6 +28,7 @@
   background: var(--background-yellow);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .headerContent {
@@ -36,6 +37,9 @@
     align-items: center;
     margin: 30px 20px;
     width: 80%;
+    padding: 10px 40px;
+    align-self: center;
+    border-bottom: solid 2px var(--card-pink);
 }
 
 .headerBtn {
