--- a/client/flip/src/compononents/views/Logout/Logout.module.css
+++ b/client/flip/src/compononents/views/Logout/Logout.module.css
@@ -3,11 +3,11 @@
 .logoutPage {
     grid-area: page;
     height: 400px;
-    background: var(--create-card-green);
+    background: var(--card-blue);
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60%;
+    width: 40%;
     margin: auto;
     box-shadow: 3px 3px 6px black;
 }
