Added signup password validation. Fixed redirect bug on logout, and b… (#36)
* Added signup password validation. Fixed redirect bug on logout, and bug in getting all user decks.

* cleanup

* more

---------

Co-authored-by: Seth Zygarlicke <seth.zygarlicke@bestbuy.com>

--- a/client/flip/src/compononents/views/Logout/LogoutForm.module.css
+++ b/client/flip/src/compononents/views/Logout/LogoutForm.module.css
@@ -23,7 +23,7 @@
 
 .logoutButton {
   text-align: center;
-  color: var(--card-blue);
+  color: var(--background-yellow);
   font-family: var(--logo-font);
   font-size: 80px;
   font-weight: 500;
@@ -32,18 +32,17 @@
 
 .logoutButton:hover {
   cursor: pointer;
-  color: var(--card-purple);
+  color: var(--card-green);
 }
 
 .cancelButton {
   margin: 30px 0;
-  color: var(--card-purple);
-  opacity: .8;
+  color: var(--pencil-gray);
   border: none;
   font-size: 30px;
 }
 
 .cancelButton:hover {
   cursor: pointer;
-  opacity: 1;
+  color: black;
 }
