Reorganized server dir, added a dummy stats page, fixed seeds script sort of.

--- a/client/flip/src/compononents/common/UserResult/UserResult.module.css
+++ b/client/flip/src/compononents/common/UserResult/UserResult.module.css
@@ -60,3 +60,10 @@
     box-shadow: 2px 2px 4px var(--card-pink);
     color: var(--pencil-gray);
 }
+
+.noDecks {
+    color: var(--card-pink);
+    font-size: 24px;
+    text-align: center;
+    align-self: center;
+}
