--- a/client/flip/src/compononents/views/Stats/Stats.module.css
+++ b/client/flip/src/compononents/views/Stats/Stats.module.css
@@ -26,7 +26,7 @@
     width: 100%;
     padding-bottom: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 400;
     color: var(--pencil-gray);
     font-family: var(--text-font);
@@ -37,7 +37,21 @@
     text-align: center;
     color: var(--background-yellow);
     font-family: var(--logo-font);
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 500;
-    margin: 30px 0;
+    margin: 20px 0;
+  }
+
+  .statsHeadingForNow {
+    color: var(--background-yellow);
+    font-size: 24px;
+  }
+
+  .back2Home {
+    font-size: 28px;
+    color: var(--pencil-gray);
+  }
+
+  .back2Home:hover {
+   color: black;
   }
