--- a/client/src/compononents/common/UserFeedCarousel/UserFeedCarousel.module.css
+++ b/client/src/compononents/common/UserFeedCarousel/UserFeedCarousel.module.css
@@ -13,7 +13,7 @@
 }
 
 .contentContainer {
-    width: 60vw;
+    width: 60vw !important;
     display: flex;
     gap: 10px;
     align-items: center;
