--- a/client/src/compononents/common/StudyDeck/StudyDeck.module.css
+++ b/client/src/compononents/common/StudyDeck/StudyDeck.module.css
@@ -9,10 +9,41 @@
 
 .studyDeckContainer {
     flex: 1 0 70%;
+    max-height: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
+}
+
+.studyDeckHeader {
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.studyDeckHeader > h3 {
+    font-size: 30px;
+}
+
+.deckName {
+    color: var(--card-pink);
+}
+
+.cancelStudyBtn {
+    color: var(--card-purple);
+    font-size: 24px;
+    outline: none;
+    border: none;
+    background: var(--background-yellow);
+    font-family: var(--text-font);
+    opacity: .7;
+}
+
+.cancelStudyBtn:hover {
+    cursor: pointer;
+    opacity: 1;
 }
 
 .actions {
