Added a button to cancel studying. (#54)
* Added a button to cancel studying.

* Cleanup and version bump.

---------

Co-authored-by: Seth Zygarlicke <seth.zygarlicke@bestbuy.com>

--- a/client/src/compononents/common/SelectedDeck/SelectedDeck.module.css
+++ b/client/src/compononents/common/SelectedDeck/SelectedDeck.module.css
@@ -115,7 +115,6 @@
     outline: none;
     border: none;
     flex: 1 0 50%;
-    padding: 20px;
     font-size: 60px;
     background: transparent;
     font-family: var(--logo-font);
@@ -144,9 +143,10 @@
 }
 
 .returnHome {
-    z-index: 2;
+    flex: 0 1 auto;
     display: flex;
     justify-content: center;
+    margin-top: 30px;
 }
 
 .backBtn {
