--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
   --card-blue: rgb(81, 128, 248);
   --action-blue: rgb(103, 145, 253);
   --card-pink: #f8519f;
+  --alt-pink: #FF00E5;
   --card-purple: rgb(199, 107, 252);
   --card-green: rgb(29, 228, 102);
   --create-card-green: rgb(86, 236, 141);
