--- a/client/src/compononents/common/StudyDeck/StudyDeck.module.css
+++ b/client/src/compononents/common/StudyDeck/StudyDeck.module.css
@@ -18,9 +18,7 @@
 
 .studyDeckHeader {
     width: 60%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    text-align: center;
 }
 
 .studyDeckHeader > h3 {
@@ -32,6 +30,7 @@
 }
 
 .cancelStudyBtn {
+    flex: 1 0 33%;
     color: var(--card-purple);
     font-size: 24px;
     outline: none;
@@ -47,13 +46,14 @@
 }
 
 .actions {
-    width: 40%;
+    min-width: 50%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .studyAgain {
+    flex: 1 0 33%;
     background-color: var(--background-yellow);
     font-size: 50px;
     color: var(--card-pink);
@@ -68,6 +68,7 @@
 }
 
 .nailedIt {
+    flex: 1 0 33%;
     background-color: var(--background-yellow);
     font-size: 50px;
     color: var(--dark-green);
