Fixed bug where clicking on Study Unknown Cards would crash if there were no cards to study.

--- a/client/src/compononents/common/EndOfDeck/EndOfDeck.module.css
+++ b/client/src/compononents/common/EndOfDeck/EndOfDeck.module.css
@@ -15,11 +15,18 @@
     font-size: 50px;
 }
 
+.withUnknownButton {
+    justify-content: space-between;
+}
+
+.withoutUnknownButton {
+    justify-content: center;
+}
+
 .studyActions {
     width: 70%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 .actionButton {
