--- a/client/src/compononents/LoadingScreen/LoadingScreen.module.css
+++ b/client/src/compononents/LoadingScreen/LoadingScreen.module.css
@@ -2,5 +2,9 @@
     flex: 1 0 75%;
     display: flex;
     justify-content: center;
-    align-items: center;
+}
+
+.loadingWrapper {
+    display: flex;
+    flex-direction: column;
 }
