--- a/client/src/compononents/common/CreateCardForm/CreateCardForm.module.css
+++ b/client/src/compononents/common/CreateCardForm/CreateCardForm.module.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     height: 100%;
 }
 
@@ -16,6 +15,8 @@
     align-items: center;
     color: var(--background-yellow);
     background: var(--background-yellow);
+    position: relative;
+    z-index: 0;
 }
 
 .error {
@@ -23,6 +24,8 @@
     text-align: center;
     padding: 5px;
     height: 40px;
+    position: relative;
+    z-index: 10;
 }
 
 .addCard {
