--- a/client/src/compononents/common/NameDeckForm/NameDeckForm.module.css
+++ b/client/src/compononents/common/NameDeckForm/NameDeckForm.module.css
@@ -1,11 +1,10 @@
-@import url('../../../index.css');
-
-.finishDeckContainer {
+.nameDeckFormContainer {
     flex: 1 0 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 15px;
 }
 
 .error {
@@ -15,7 +14,7 @@
     margin-bottom: 30px;
 }
 
-.finishDeckForm {
+.nameDeckForm {
     width: 80%;
     height: 400px;
     min-width: 700px;
@@ -25,7 +24,6 @@
     align-items: center;
     background: var(--card-blue);
     box-shadow: 3px 3px 6px  black;
-    margin-top: 15px;
 }
 
 .label {
@@ -34,19 +32,32 @@
     color: var(--background-yellow);
 }
 
-.header {
-    color: var(--pencil-gray);
-    font-size: 40px;
-    text-align: center;
-    padding: 15px;
-    border-bottom: solid 1.5px var(--card-pink);
+.line {
     width: 100%;
+    background: var(--card-pink);
+    border: solid 1.5px var(--card-pink);
 }
 
-.modalHeading {
-    color: var(--background-yellow);
-    font-size: 32px;
+.inputField {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    margin: 10px;
+    padding: 20px 0;
+}
+
+.input {
+    width: 80%;
+    border: solid 2px var(--background-yellow);
+    background-color: rgb(86, 236, 141, .3);
+    font-family: var(--text-font);
+    border-radius: 5px;
+    height: 60px;
+    font-size: 40px;
+    color: var(--pencil-gray);
+    margin-top: 30px;
 }
 
 .actions {
