--- a/client/src/components/views/Chat/Chat.module.css
+++ b/client/src/components/views/Chat/Chat.module.css
@@ -21,10 +21,9 @@
 
 .chat {
     flex: 1 0 70%;
-    max-height: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -32,12 +31,12 @@
     outline: none;
     border: var(--card-pink);
     border-radius: 5px;
-    height: 150px;
+    height: 100px;
     width: 300px;
     padding: 20px;
     background-color: var(--card-pink);
     color: white;
-    font-size: 40px;
+    font-size: 30px;
     font-family: var(--text-font);
 }
 .chatBtn:hover {
