--- a/client/src/components/views/Chat/Chat.module.css
+++ b/client/src/components/views/Chat/Chat.module.css
@@ -31,15 +31,24 @@
     outline: none;
     border: var(--card-pink);
     border-radius: 5px;
-    height: 100px;
-    width: 300px;
     padding: 20px;
     background-color: var(--card-pink);
+    font-size: 24px;
     color: white;
-    font-size: 30px;
     font-family: var(--text-font);
 }
 .chatBtn:hover {
     cursor: pointer;
     background-color: var(--card-purple);
+}
+
+.moreActions {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 50%;
+}
+
+.roomsList {
+    list-style-type: none;
 }
