--- a/client/src/components/common/ChatContainer/ChatContainer.module.css
+++ b/client/src/components/common/ChatContainer/ChatContainer.module.css
@@ -1,6 +1,6 @@
 .chatContainer {
     flex: 1 0 25%;
-    height: 100;
+    height: 100%;
     padding-top: 40px;
     background: var(--background-yellow);
     display: flex;
