--- a/client/src/components/views/Chat/Chat.module.css
+++ b/client/src/components/views/Chat/Chat.module.css
@@ -23,8 +23,8 @@
     flex: 1 0 70%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+    padding-top: 24px;
 }
 
 .chatBtn {
@@ -42,13 +42,13 @@
     background-color: var(--card-purple);
 }
 
+.spacer {
+    height: 24px;
+}
+
 .moreActions {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     width: 50%;
-}
-
-.roomsList {
-    list-style-type: none;
 }
