--- a/client/src/components/common/ChatMessage/ChatMessage.module.css
+++ b/client/src/components/common/ChatMessage/ChatMessage.module.css
@@ -17,7 +17,7 @@
     word-break: break-word;
     padding: 8px;
     position: relative;
-    max-width: 80px;
+    max-width: 80%;
     display: inline-block;
     margin-bottom: 4px;
     background-color: var(--pencil-gray);
@@ -32,6 +32,7 @@
     border-bottom-left-radius: 8px;
     background-color: var(--card-blue);
     align-self: flex-end;
+    margin: 4px;
 }
 
 .alignRight {
