--- a/client/src/components/common/ChatRoom/ChatRoom.module.css
+++ b/client/src/components/common/ChatRoom/ChatRoom.module.css
@@ -12,14 +12,18 @@
 
 .header {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: 28px;
     height: 64px;
     width: 100%;
-    color: var(--card-blue);
+    color: var(--pencil-gray);
     border-bottom: solid 2px var(--card-pink);
+}
+
+.roomName {
+    color: var(--card-blue);
+    margin-left: 16px;
 }
 
 .roomDeets {
