--- a/client/src/components/common/CarouselItems/CarouselItem/CarouselItem.module.css
+++ b/client/src/components/common/CarouselItems/CarouselItem/CarouselItem.module.css
@@ -10,7 +10,7 @@
     font-size: 24px;
     background-color: var(--action-blue);
     color: var(--background-yellow);
-    box-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 4px var(--dark-gray);
 }
 
 .line {
