--- a/client/src/components/common/ChatContainer/ChatContainer.module.css
+++ b/client/src/components/common/ChatContainer/ChatContainer.module.css
@@ -34,7 +34,7 @@
 .msgText {
     font-size: 18px !important;
     margin: 0 !important;
-    color: black;
+    color: var(--dark-gray);
 }
 
 .hostMsg {
