--- a/client/src/components/common/ChatJoinLeaveModal/ChatJoinLeaveModal.module.css
+++ b/client/src/components/common/ChatJoinLeaveModal/ChatJoinLeaveModal.module.css
@@ -8,7 +8,7 @@
     "heading"
     "actions";
     background-color: var(--create-card-green);
-    box-shadow: 3px 3px 6px black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
 }
 
 .header {
