--- a/client/src/components/common/AbortActionConfirmationModal/AbortActionConfirmationModal.module.css
+++ b/client/src/components/common/AbortActionConfirmationModal/AbortActionConfirmationModal.module.css
@@ -9,7 +9,7 @@
     gap: 20px;
     align-items: center;
     background: var(--card-purple);
-    box-shadow: 3px 3px 6px black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
     margin-top: 30px;
     position: relative;
     z-index: 0;
