--- a/client/src/components/common/AddedCards/AddedCards.module.css
+++ b/client/src/components/common/AddedCards/AddedCards.module.css
@@ -27,7 +27,7 @@
     display: block;
     color: var(--background-yellow);
     background: var(--action-blue);
-    box-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 4px var(--dark-gray);
     margin-top: 10px;
     padding: 8px 12px;
 }
