--- a/client/src/components/common/CreateCardForm/CardSide/CardSide.module.css
+++ b/client/src/components/common/CreateCardForm/CardSide/CardSide.module.css
@@ -14,7 +14,7 @@
     align-items: center;
     padding: 20px 0;
     background: var(--create-card-green);
-    box-shadow: 3px 3px 6px  black;
+    box-shadow: 3px 3px 6px  var(--dark-gray);
 }
 
 .label {
