--- a/client/src/components/common/EditDeckActionCard/EditDeckActionCard.module.css
+++ b/client/src/components/common/EditDeckActionCard/EditDeckActionCard.module.css
@@ -19,7 +19,7 @@
     justify-content: space-between;
     align-items: center;
     background: var(--card-purple);
-    box-shadow: 3px 3px 6px  black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
     padding-bottom: 20px;
 }
 
