--- a/client/src/components/common/FinishDeckForm/FinishDeckForm.module.css
+++ b/client/src/components/common/FinishDeckForm/FinishDeckForm.module.css
@@ -24,7 +24,7 @@
     justify-content: space-between;
     align-items: center;
     background: var(--card-blue);
-    box-shadow: 3px 3px 6px  black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
     margin-top: 15px;
 }
 
