--- a/client/src/components/common/FourOhFour/FourOhFour.module.css
+++ b/client/src/components/common/FourOhFour/FourOhFour.module.css
@@ -15,7 +15,7 @@
     align-items: center;
     background: var(--card-purple);
     color: var(--background-yellow);
-    box-shadow: 3px 3px 6px black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
     margin-top: 30px;
     position: relative;
     z-index: 0;
