--- a/client/src/components/common/NameDeckForm/NameDeckForm.module.css
+++ b/client/src/components/common/NameDeckForm/NameDeckForm.module.css
@@ -23,7 +23,7 @@
     justify-content: space-between;
     align-items: center;
     background: var(--card-blue);
-    box-shadow: 3px 3px 6px  black;
+    box-shadow: 3px 3px 6px var(--dark-gray); 
 }
 
 .label {
