--- a/client/src/components/common/SelectedDeck/SelectedDeck.module.css
+++ b/client/src/components/common/SelectedDeck/SelectedDeck.module.css
@@ -18,7 +18,7 @@
     gap: 20px;
     align-items: center;
     background: var(--action-blue);
-    box-shadow: 3px 3px 6px  black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
     margin-top: 30px;
     position: relative;
     z-index: 0;
