--- a/client/src/components/common/UserFeedCarousel/UserFeedCarousel.module.css
+++ b/client/src/components/common/UserFeedCarousel/UserFeedCarousel.module.css
@@ -31,7 +31,7 @@
     font-size: 30px;
     background-color: var(--action-blue);
     color: var(--background-yellow);
-    box-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 4px var(--dark-gray);
 }
 
 .line {
