--- a/client/src/components/common/UserResult/ChatResult.module.css
+++ b/client/src/components/common/UserResult/ChatResult.module.css
@@ -6,7 +6,7 @@
     height: 150px;
     width: 300px;
     background-color: var(--background-yellow);
-    box-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 4px var(--dark-gray);
 }
 
 .username {
@@ -37,7 +37,7 @@
     font-size: 16px;
     background-color: var(--action-blue);
     color: var(--background-yellow);
-    box-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 4px var(--dark-gray);
 }
 
 .line {
