--- a/client/src/components/views/Logout/Logout.module.css
+++ b/client/src/components/views/Logout/Logout.module.css
@@ -9,5 +9,5 @@
     align-items: center;
     width: 40%;
     margin: auto;
-    box-shadow: 3px 3px 6px black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
 }
