--- a/client/src/components/views/Stats/Stats.module.css
+++ b/client/src/components/views/Stats/Stats.module.css
@@ -9,7 +9,7 @@
     align-items: center;
     width: 40%;
     margin: auto;
-    box-shadow: 3px 3px 6px black;
+    box-shadow: 3px 3px 6px var(--dark-gray);
 }
 
 .actions {
@@ -53,5 +53,5 @@
   }
 
   .back2Home:hover {
-   color: black;
+   color: var(--dark-gray);
   }
