Made UserResult reusable for ChatRoom members. (#81)
* Made UserResult reusable for ChatRoom members.

* Altered they way styles are handled in CarouselItem.

* Reworked the styling of ChatRoom/user results in it.

* cleanup

---------

Co-authored-by: Seth Zygarlicke <seth.zygarlicke@bestbuy.com>

--- a/client/src/components/common/UserResult/BrowseResult.module.css
+++ b/client/src/components/common/UserResult/BrowseResult.module.css
@@ -4,7 +4,7 @@
     height: 300px;
     width: 500px;
     background-color: var(--background-yellow);
-    box-shadow: 2px 2px 4px var(--dark-gray);
+    box-shadow: 2px 2px 4px var(--dark-gray); 
 }
 
 .userResultContainer:hover {
@@ -50,7 +50,7 @@
     border: solid 1px var(--card-pink);
 }
 
-.label {
+.name {
     padding-top: 10px;
     font-size: 20px;
 }
