--- a/client/src/components/common/CarouselItems/CarouselItem/CarouselItem.module.css
+++ b/client/src/components/common/CarouselItems/CarouselItem/CarouselItem.module.css
@@ -1,6 +1,6 @@
 @import url('../../../../index.css');
 
-.carouselItem {
+.container {
     height: 120px;
     width: 210px;
     display: flex;
@@ -10,7 +10,7 @@
     font-size: 24px;
     background-color: var(--action-blue);
     color: var(--background-yellow);
-    box-shadow: 2px 2px 4px black;
+    box-shadow: 2px 2px 4px var(--dark-gray);
 }
 
 .line {
@@ -28,7 +28,7 @@
     text-overflow: ellipsis;
 }
 
-.carouselItem:hover {
+.container:hover {
     cursor: pointer;
     box-shadow: 2px 2px 4px var(--card-pink);
     color: var(--pencil-gray);
