--- a/client/src/components/common/UserResult/ChatResult.module.css
+++ b/client/src/components/common/UserResult/ChatResult.module.css
@@ -1,15 +1,12 @@
 @import url('../../../index.css');
 
 .userResultContainer {
-    height: 300px;
-    width: 500px;
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 300px;
     background-color: var(--background-yellow);
     box-shadow: 2px 2px 4px var(--dark-gray);
-}
-
-.userResultContainer:hover {
-    cursor: pointer;
-    box-shadow: 2px 2px 4px var(--card-pink);
 }
 
 .username {
@@ -17,27 +14,27 @@
     color: var(--card-blue);
     width: 100%;
     padding-bottom: 10px;
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
 }
 
 .contentContainer {
     width: 90%;
     display: flex;
-    gap: 10px;
+    gap: 4px;
     align-items: center;
     overflow: hidden;    
-    padding: 10px 0;
+    padding: 4px 0;
 }
 
 .deckCarouselItem {
-    height: 80px;
-    width: 120px;
+    height: 64px;
+    width: 84px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    font-size: 30px;
+    font-size: 16px;
     background-color: var(--action-blue);
     color: var(--background-yellow);
     box-shadow: 2px 2px 4px var(--dark-gray);
@@ -45,14 +42,13 @@
 
 .line {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 8px;
     background: var(--card-pink);
     border: solid 1px var(--card-pink);
 }
 
-.label {
-    padding-top: 10px;
-    font-size: 20px;
+.name {
+    font-size: 16px;
 }
 
 .deckCarouselItem:hover {
@@ -63,7 +59,7 @@
 
 .noDecks {
     color: var(--card-pink);
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
     align-self: center;
 }
