--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,7 @@
   --create-card-green: rgb(86, 236, 141);
   --dark-green: rgb(10, 130, 72);
   --pencil-gray: #5c6274;
+  --dark-gray: #212124;
   --logo-font: 'Reenie Beanie', cursive;
   --text-font: 'Vidaloka', serif;
 }
@@ -29,6 +30,10 @@ body {
 a {
   color: inherit;
   text-decoration: none !important;
+}
+
+h4 {
+  margin: 8px 0;
 }
 
 .link {
